--- a/progetto/LavoratoriStagionali/pom.xml
+++ b/progetto/LavoratoriStagionali/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>it.univr.lavoratoristagionali</groupId>
+    <groupId>it.univr</groupId>
     <artifactId>LavoratoriStagionali</artifactId>
     <version>1.0-SNAPSHOT</version>
     <name>LavoratoriStagionali</name>
@@ -60,8 +60,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>
-                                it.univr.lavoratoristagionali.lavoratoristagionali/it.univr.lavoratoristagionali.lavoratoristagionali.HelloApplication
+                            <mainClass>it.univr.lavoratoristagionali/it.univr.lavoratoristagionali.HelloApplication
                             </mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
