--- a/progetto/LavoratoriStagionali/pom.xml
+++ b/progetto/LavoratoriStagionali/pom.xml
@@ -48,6 +48,11 @@
             <artifactId>materialfx</artifactId>
             <version>11.13.5</version>
         </dependency>
+        <dependency>
+            <groupId>io.github.palexdev</groupId>
+            <artifactId>virtualizedfx</artifactId>
+            <version>11.2.6</version>
+        </dependency>
     </dependencies>
 
     <build>
